--- a/bedrock/firefox/templates/firefox/channel/base.html
+++ b/bedrock/firefox/templates/firefox/channel/base.html
@@ -58,6 +58,7 @@
   <section class="t-newsletter">
     <div class="mzp-l-content">
       {{ email_newsletter_form(
+        button_class='mzp-t-product mzp-t-lg',
         title=ftl('newsletter-form-firefox-and-you'),
         desc=ftl('newsletter-form-get-firefox-tips')) }}
     </div>
