--- a/bedrock/firefox/templates/firefox/developer/includes/alt-newsletter.html
+++ b/bedrock/firefox/templates/firefox/developer/includes/alt-newsletter.html
@@ -6,12 +6,12 @@
         'app-dev',
         title='Mozilla Developer Newsletter',
         desc=_('Get developer news, tricks and resources <br /> sent straight to your inbox.'),
-        button_class='mzp-t-product',
+        button_class='mzp-t-product mzp-t-lg',
         include_language=False) }}
     {% else %}
       {{ email_newsletter_form(
         spinner_color='#fff',
-        button_class='mzp-c-button mzp-t-product') }}
+        button_class='mzp-c-button mzp-t-product mzp-t-lg') }}
     {% endif %}
   </div>
 </section>
