--- a/bedrock/firefox/templates/firefox/retention/thank-you.html
+++ b/bedrock/firefox/templates/firefox/retention/thank-you.html
@@ -63,7 +63,7 @@
   </div>
 </main>
 <aside id="newsletter-subscribe">
-  <div class="mzp-l-content mzp-t-narrow">
+  <div class="mzp-l-content mzp-t-content-md">
     {{ email_newsletter_form(
        newsletters='mozilla-foundation',
        title=_('Stay in touch for more cool stuff'),
