--- a/bedrock/firefox/templates/firefox/testflight.html
+++ b/bedrock/firefox/templates/firefox/testflight.html
@@ -30,7 +30,7 @@
   heading_level=1) %}
   {% endcall %}
 
-  <aside class="mzp-l-content mzp-t-narrow">
+  <section class="mzp-l-content mzp-t-content-sm">
     <form id="newsletter-form" class="mzp-c-newsletter-form" action="{{ url('newsletter.subscribe') }}" method="post" data-spinner-color="#fff">
       {{ newsletter_form.newsletters|safe }}
       {# test flight program is only available in english #}
@@ -40,26 +40,23 @@
       <fieldset class="mzp-c-newsletter-content">
         <div class="mzp-c-form-errors" id="newsletter-errors"></div>
 
-        <p>
+        <div>
           <label for="id_email">{{ _('Email') }}</label>
           <input type="email" class="mzp-js-email-field" id="id_email" name="email" required aria-required="true">
-        </p>
+        </div>
 
         <div id="newsletter-details" class="mzp-c-newsletter-details">
           <input type="hidden" name="country" id="id_country"  aria-required="false">
 
           <fieldset class="mzp-u-inline">
             <legend>Format</legend>
-            <p>
               <label for="format-html" class="mzp-u-inline">
                 <input type="radio" id="format-html" name="fmt" value="H" checked> HTML
               </label>
               <label for="format-text" class="mzp-u-inline">
                 <input type="radio" id="format-text" name="fmt" value="T"> Text
               </label>
-            </p>
           </fieldset>
-          <p>
             <label for="id_terms" class="mzp-u-inline">
               <input id="id_terms" name="terms" required aria-required="true" type="checkbox">
               {% trans url='#terms-conditions' %}
@@ -67,14 +64,13 @@
               <a href="{{ url }}">Terms and Conditions</a>
               {% endtrans %}
             </label>
-          </p>
           <p>
             {{ newsletter_form.privacy|safe }}
           </p>
         </div>
 
         <p class="mzp-c-form-submit">
-          <button class="mzp-c-button" id="newsletter-submit" type="submit">{{ _('Submit') }}</button>
+          <button class="mzp-c-button mzp-t-product" id="newsletter-submit" type="submit">{{ _('Submit') }}</button>
         </p>
       </fieldset>
 
@@ -94,9 +90,9 @@
       </p>
       <p>{{ _('Be aware that this email may be in your spam folder.') }}</p>
     </div>
-  </aside>
+  </section>
 
-  <section class="mzp-l-content mzp-t-narrow" id="terms-conditions">
+  <section class="mzp-l-content mzp-t-content-sm" id="terms-conditions">
     <h4>{{ _('Terms and Conditions') }}</h4>
     <ol class="mzp-u-list-styled">
       <li>
