--- a/bedrock/firefox/templates/firefox/welcome/base.html
+++ b/bedrock/firefox/templates/firefox/welcome/base.html
@@ -21,7 +21,7 @@
     <div class="mzp-l-content c-page-header-inner">
       {{ high_res_img('protocol/img/logos/firefox/browser/logo-word-hor-lg.png', {'alt': 'Firefox', 'width': '216', 'height': '40', 'class': 'c-header-logo'}) }}
       <p class="c-shoulder-cta">
-        <a class="mzp-c-button mzp-t-secondary mzp-t-small mzp-t-product" href="{{ url('firefox.accounts') }}">
+        <a class="mzp-c-button mzp-t-secondary mzp-t-md mzp-t-product" href="{{ url('firefox.accounts') }}">
           {{ ftl('navigation-join-firefox') }}
         </a>
       </p>
@@ -31,7 +31,7 @@
   {% block content_intro %}{% endblock %}
 
   <section class="page-body">
-    <div class="mzp-l-content mzp-t-narrow">
+    <div class="mzp-l-content mzp-t-content-md">
 
       {% block content_primary %}{% endblock %}
 
@@ -43,7 +43,7 @@
   </section>
 
   <aside class="page-footer">
-    <div class="mzp-l-content mzp-t-narrow c-utilities">
+    <div class="mzp-l-content mzp-t-content-md c-utilities">
       {% block content_utility %}{% endblock %}
     </div>
   </aside>
