--- a/bedrock/firefox/templates/firefox/whatsnew/index-account.html
+++ b/bedrock/firefox/templates/firefox/whatsnew/index-account.html
@@ -45,7 +45,7 @@
             {{ fxa_button(
               entrypoint=entrypoint,
               button_text=ftl('whatsnew-account-main-button'),
-              class_name='mzp-t-small',
+              class_name='mzp-t-md',
               optional_parameters={'utm_campaign': campaign},
               optional_attributes={'data-cta-text': 'Sign In', 'data-cta-type': 'fxa-sync', 'data-cta-position': 'primary'}
             ) }}
