--- a/bedrock/mozorg/templates/mozorg/about/policy/transparency/index.html
+++ b/bedrock/mozorg/templates/mozorg/about/policy/transparency/index.html
@@ -17,12 +17,12 @@
 {% block content %}
 <main role="main">
   <header class="c-page-header">
-    <div class="mzp-l-content l-content-narrow">
+    <div class="mzp-l-content mzp-t-content-lg">
       <h1>{{ _('Transparency') }}</h1>
     </div>
   </header>
 
-  <div class="mzp-l-content l-content-narrow">
+  <div class="mzp-l-content mzp-t-content-lg">
     <p>
       {{ _('Transparency is a key part of how Mozilla approaches user trust.') }}
       {{ _('As an open source project that relies on open development, we build transparency into the way we write our code.') }}
@@ -38,7 +38,7 @@
     {% include 'mozorg/about/policy/transparency/includes/past-reports.html' %}
   </aside>
 
-  <div id="faq" class="mzp-l-content l-content-narrow">
+  <div id="faq" class="mzp-l-content mzp-t-content-lg">
     <h2>{{ _('Frequently Asked Questions') }}</h2>
 
     <section class="mzp-c-details">
@@ -159,7 +159,7 @@
     </section>
   </div>
 
-  <div id="definitions" class="mzp-l-content l-content-narrow">
+  <div id="definitions" class="mzp-l-content mzp-t-content-lg">
     <h2>{{ _('Definitions') }}</h2>
 
     <dl>
