--- a/bedrock/mozorg/templates/mozorg/about/policy/transparency/report-base.html
+++ b/bedrock/mozorg/templates/mozorg/about/policy/transparency/report-base.html
@@ -17,12 +17,12 @@
 {% block content %}
 <main role="main">
   <header class="c-page-header">
-    <div class="mzp-l-content l-content-narrow">
+    <div class="mzp-l-content mzp-t-content-lg">
       {% block report_title %}{% endblock %}
     </div>
   </header>
 
-  <div class="mzp-l-content l-content-narrow">
+  <div class="mzp-l-content mzp-t-content-lg">
     {% block report_body %}{% endblock %}
   </div>
 
