--- a/bedrock/newsletter/templates/newsletter/mozilla.html
+++ b/bedrock/newsletter/templates/newsletter/mozilla.html
@@ -47,7 +47,7 @@
     <div class="mzp-l-content">
       <h2 class="section-title">{{ self.page_desc() }}</h2>
     </div>
-    <div class="mzp-l-content mzp-t-narrow">
+    <div class="mzp-l-content mzp-t-content-sm">
       {{ email_newsletter_form(newsletters='mozilla-foundation', include_title=False, spinner_color='#c13832') }}
     </div>
   </section>
