--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -65,9 +65,9 @@
         {% endif %}
         </h2>
       {% endif %}
-      <h2 class="thank-you hidden">{{ ftl('send-to-device-your-download-link') }}</h2>
+      <h2 class="mzp-u-title-xs thank-you hidden">{{ ftl('send-to-device-your-download-link') }}</h2>
       <form class="send-to-device-form" action="{{ url('firefox.send-to-device-post') }}" method="post">
-        <ul class="error-list hidden">
+        <ul class="mzp-c-form-errors hidden">
           <li class="sms">
             {{ ftl('send-to-device-sorry-we-cant-send', fallback='send-to-device-sorry-this-number') }}
           </li>
@@ -81,22 +81,20 @@
             <input type="hidden" name="message-set" value="{{ message_set }}">
             <input type="hidden" name="product" value="{{ product }}">
           </div>
-          <div class="inline-field">
-            <label class="form-input-label" for="{{ id }}-input" data-alt="{% if input_label_alt %}{{ input_label_alt }}{% else %}{{ ftl('send-to-device-enter-your-email-or-phone', fallback='send-to-device-enter-your-email-or-phone-10-digit') }}{% endif %}"">
+          <div class="mzp-c-field mzp-l-stretch">
+            <label class="mzp-c-field-label" for="{{ id }}-input" data-alt="{{ ftl('send-to-device-enter-your-email-or-phone', fallback='send-to-device-enter-your-email-or-phone-10-digit') }}">
               {% if input_label %}
                 {{ input_label }}
               {% else %}
                 {{ ftl('send-to-device-enter-your-email') }}
               {% endif %}
             </label>
-            <div class="form-input">
-              <input id="{{ id }}-input" class="send-to-device-input" name="phone-or-email" type="text" required>
-            </div>
-            <div class="form-submit">
-              <button type="submit" class="button mzp-c-button mzp-t-product">{{ ftl('send-to-device-send') }}</button>
-            </div>
+            <input id="{{ id }}-input" class="mzp-c-field-control send-to-device-input" name="phone-or-email" type="text" required>
           </div>
-          <p class="legal sms">
+          <div class="mzp-c-button-container mzp-l-stretch">
+            <button type="submit" class="button mzp-c-button mzp-t-product">{{ ftl('send-to-device-send') }}</button>
+          </div>
+          <p class="mzp-c-button-info sms">
             {% if legal_note_sms %}
               {{ legal_note_sms }}
             {% else %}
@@ -105,7 +103,7 @@
             {% endif %}
             <a href="{{ url('privacy.notices.websites') }}#campaigns" class="more">{{ ftl('ui-learn-more') }}</a>
           </p>
-          <p class="legal email">
+          <p class="mzp-c-button-info email">
             {% if legal_note_email %}
               {{ legal_note_email }}
             {% else %}
@@ -126,8 +124,8 @@
 {%- endmacro %}
 
 {# Docs: https://bedrock.readthedocs.io/en/latest/firefox-accounts.html#signup-form #}
-{% macro fxa_email_form(entrypoint, entrypoint_experiment, entrypoint_variation, context=None, utm_campaign=None, utm_content=None, utm_term=None, style=None, class_name='fxa-email-form', form_title=None, intro_text=none, button_text=None, button_class='button button-blue') -%}
-  <form action="{{ settings.FXA_ENDPOINT }}" data-mozillaonline-action="{{ settings.FXA_ENDPOINT_MOZILLAONLINE }}" id="fxa-email-form" class="{{ class_name }}">
+{% macro fxa_email_form(entrypoint, entrypoint_experiment, entrypoint_variation, context=None, utm_campaign=None, utm_content=None, utm_term=None, style=None, class_name='fxa-email-form', form_title=None, intro_text=none, button_text=None, button_class='mzp-c-button mzp-t-product') -%}
+  <form action="{{ settings.FXA_ENDPOINT }}" data-mozillaonline-action="{{ settings.FXA_ENDPOINT_MOZILLAONLINE }}" id="fxa-email-form" class="mzp-c-form {{ class_name }}">
     <input type="hidden" name="action" value="email" />
     <input type="hidden" name="entrypoint" value="{{ entrypoint }}" id="fxa-email-form-entrypoint" />
     <input type="hidden" name="form_type" value="email" />
@@ -167,42 +165,45 @@
       <input type="hidden" name="style" value="{{ style }}" />
     {% endif %}
 
-    {% if form_title %}
-      <h2 class="fxa-email-form-title">{{ form_title }}</h2>
-    {% endif %}
+    <header class="mzp-c-form-header">
+      {% if form_title %}
+        <h2 class="mzp-c-form-heading">{{ form_title }}</h2>
+      {% endif %}
 
-    <p class="fxa-email-form-intro">
-    {% if intro_text %}
-      {{ intro_text }}
-    {% else %}
-      {{ ftl('fxa-form-enter-your-email') }}
-    {% endif %}
-    </p>
+      <p class="fxa-email-form-intro">
+      {% if intro_text %}
+        {{ intro_text }}
+      {% else %}
+        {{ ftl('fxa-form-enter-your-email') }}
+      {% endif %}
+      </p>
+    </header>
 
     <div class="fxa-email-field-container">
-      <p class="field">
-        <label for="fxa-email-field">{{ ftl('fxa-form-email-address') }}</label>
-        <input type="email" name="email" id="fxa-email-field" class="fxa-email-field" placeholder="user@example.com" required>
-      </p>
+      <div class="mzp-c-field mzp-l-stretch">
+        <label for="mzp-c-field-label">{{ ftl('fxa-form-email-address') }}</label>
+        <input type="email" name="email" id="fxa-email-field" class="mzp-c-field-control" placeholder="user@example.com" required>
+        <p class="mzp-c-field-info">
+          {{ ftl('fxa-form-by-proceeding', url1='https://accounts.firefox.com/legal/terms', url2='https://accounts.firefox.com/legal/privacy') }}
+        </p>
+      </div>
 
-      <p class="agreement">
-        {{ ftl('fxa-form-by-proceeding', url1='https://accounts.firefox.com/legal/terms', url2='https://accounts.firefox.com/legal/privacy') }}
-      </p>
-
-      <button
-        type="submit"
-        class="{{ button_class }}"
-        id="fxa-email-form-submit"
-        data-cta-type="fxa-sync"
-        data-cta-text="Register"
-        data-cta-position="primary"
-      >
-      {% if button_text %}
-        {{ button_text }}
-      {% else %}
-        {{ ftl('fxa-form-continue') }}
-      {% endif %}
-      </button>
+      <div class="mzp-c-button-container mzp-l-stretch">
+        <button
+          type="submit"
+          class="{{ button_class }}"
+          id="fxa-email-form-submit"
+          data-cta-type="fxa-sync"
+          data-cta-text="Register"
+          data-cta-position="primary"
+        >
+        {% if button_text %}
+          {{ button_text }}
+        {% else %}
+          {{ ftl('fxa-form-continue') }}
+        {% endif %}
+        </button>
+      </div>
     </div>
 
   </form>
