--- a/bedrock/firefox/templates/firefox/developer/index.html
+++ b/bedrock/firefox/templates/firefox/developer/index.html
@@ -34,7 +34,7 @@
       <h1 class="intro-title">Firefox Browser Developer Edition</h1>
       <p class="intro-tagline">{{ _('Welcome to your new favorite browser. Get the latest features, fast performance, and the development tools you need to build for the open web.') }}</p>
 
-      {{ download_firefox('alpha', platform='desktop', dom_id='intro-download', button_color='button-arrow', download_location='primary cta') }}
+      {{ download_firefox('alpha', platform='desktop', dom_id='intro-download', download_location='primary cta') }}
 
       <p class="intro-feedback-note">
         {{ _('Firefox Developer Edition automatically sends feedback to Mozilla.') }}
@@ -70,7 +70,7 @@
           <div class="mzp-c-card-feature-content-container">
             <h2 class="mzp-c-card-feature-title">{{ _('Download the Firefox browser made for developers') }}</h2>
             <div class="mzp-c-card-feature-desc">
-                {{ download_firefox('alpha', platform='desktop', dom_id='footer-download', button_color='button-arrow', download_location='footer cta') }}
+                {{ download_firefox('alpha', platform='desktop', dom_id='footer-download', download_location='footer cta') }}
             </div>
           </div>
         </div>
@@ -84,12 +84,12 @@
           'app-dev',
           title='Get the most out of Firefox Developer Edition',
           desc='Learn about Dev Edition and subscribe to the Mozilla Developer Newsletter.',
-          button_class='mzp-t-product mzp-t-small',
+          button_class='mzp-t-product mzp-t-lg',
           include_language=False) }}
       {% else %}
         {{ email_newsletter_form(
           spinner_color='#fff',
-          button_class='mzp-c-button mzp-t-product') }}
+          button_class='mzp-c-button mzp-t-product mzp-t-lg') }}
       {% endif %}
     </div>
   </section>
