--- a/bedrock/firefox/templates/firefox/messaging-experiment/base.html
+++ b/bedrock/firefox/templates/firefox/messaging-experiment/base.html
@@ -20,14 +20,14 @@
   <header class="c-page-header">
     <div class="mzp-l-content c-page-header-inner">
       {{ high_res_img('protocol/img/logos/firefox/browser/logo-word-hor-lg.png', {'alt': 'Firefox', 'width': '216', 'height': '40', 'class': 'c-header-logo'}) }}
-      <p class="c-shoulder-cta"><a class="mzp-c-button mzp-t-secondary mzp-t-small mzp-t-product" href="{{ url('firefox.accounts') }}">{{ _('Join Firefox') }}</a></p>
+      <p class="c-shoulder-cta"><a class="mzp-c-button mzp-t-secondary mzp-t-md mzp-t-product" href="{{ url('firefox.accounts') }}">{{ _('Join Firefox') }}</a></p>
     </div>
   </header>
 
   {% block content_intro %}{% endblock %}
 
   <section class="page-body">
-    <div class="mzp-l-content mzp-t-narrow">
+    <div class="mzp-l-content mzp-t-content-md">
 
       {% block content_primary %}{% endblock %}
 
@@ -39,7 +39,7 @@
   </section>
 
   <aside class="page-footer">
-    <div class="mzp-l-content mzp-t-narrow c-utilities">
+    <div class="mzp-l-content mzp-t-content-md c-utilities">
       {% block content_utility %}{% endblock %}
     </div>
   </aside>
