--- a/bedrock/newsletter/templates/newsletter/developer.html
+++ b/bedrock/newsletter/templates/newsletter/developer.html
@@ -40,7 +40,7 @@
     <header class="mzp-l-content">
       <h2 class="section-title">{{ self.page_desc() }}</h2>
     </header>
-    <div class="mzp-l-content mzp-t-narrow">
+    <div class="mzp-l-content mzp-t-content-sm">
       {{ email_newsletter_form(newsletters='app-dev', include_language=False, include_title=False, spinner_color='#0c99d5') }}
     </div>
   </section>
