--- a/bedrock/newsletter/templates/newsletter/firefox.html
+++ b/bedrock/newsletter/templates/newsletter/firefox.html
@@ -28,12 +28,12 @@
   </div>
 
   <section class="section-subscribe">
-    <header class="mzp-l-content">
+    <header class="mzp-l-content mzp-t-firefox">
       <h1 class="page-title">{{ self.page_title() }}</h1>
       <h2 class="section-title">{{ self.page_desc() }}</h2>
     </header>
-    <div class="mzp-l-content mzp-t-narrow">
-      {{ email_newsletter_form(include_title=False, spinner_color='#3a304b') }}
+    <div class="mzp-l-content mzp-t-content-sm">
+      {{ email_newsletter_form(include_title=False, spinner_color='#3a304b', button_class='mzp-t-product mzp-t-lg') }}
     </div>
   </section>
 </main>
