--- a/bedrock/newsletter/templates/newsletter/index.html
+++ b/bedrock/newsletter/templates/newsletter/index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <main role="main">
-  <div class="mzp-l-content mzp-t-narrow">
+  <div class="mzp-l-content mzp-t-content-sm">
     {{ email_newsletter_form(
       title=_('Read all about it in our <span>newsletter</span>'),
       desc=_('Subscribe to updates and keep current with Mozilla news. It’s the perfect way for us to keep in touch!'),
