--- a/bedrock/newsletter/templates/newsletter/updated.html
+++ b/bedrock/newsletter/templates/newsletter/updated.html
@@ -26,7 +26,7 @@
     </div>
 
     {% if unsubscribed_all %}  {# user requested to unsub all #}
-      <div class="mzp-l-content mzp-t-narrow">
+      <div class="mzp-l-content mzp-t-content-md">
         <section class="c-updated-block">
           <header class="c-updated-block-header">
             <h1>{{ _('You’ve been unsubscribed.') }}</h1>
@@ -43,14 +43,19 @@
                 {{ reason }}
               </label>
             {% endfor %}
-            <input type="checkbox" id="unsub99" name="reason-text-p">
-            <textarea placeholder="{{ _('Other…') }}" cols="35" rows="3" name="reason-text"></textarea>
-            <input type="submit" value="{{_('Submit') }}" class="mzp-c-button" name="feedback" />
+            <label>
+              <input type="checkbox" id="unsub99" name="reason-text-p">
+              {{ _('Other…') }}<br>
+              <textarea cols="35" rows="3" name="reason-text"></textarea>
+            </label>
+            <div class="mzp-c-button-container mzp-l-align-center">
+              <input type="submit" value="{{_('Submit') }}" class="mzp-c-button" name="feedback" />
+            </div>
           </form>
         </section>
       </div>
     {% elif reasons_submitted %}
-      <div class="mzp-l-content mzp-t-narrow">
+      <div class="mzp-l-content mzp-t-content-md">
         <section class="c-updated-block">
           <header class="c-updated-block-header">
             <h1>{{ _('You’ve been unsubscribed.') }}</h1>
